--- a/ClinicalTransformerNER/.gitignore
+++ b/ClinicalTransformerNER/.gitignore
@@ -5,4 +5,6 @@ __pycahce__
 new_ner_model
 /.python-version
 */.ipynb_checkpoints
+/.ipynb_checkpoints/
 /test/
+/test_data/biaffine_conll2003_mini/
